--- a/03/Homework/css/style.css
+++ b/03/Homework/css/style.css
@@ -51,7 +51,7 @@ body {
      line-height: 1.4;
      font-family: Helvetica, Arial, sans-serif;
      background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
-      background-size: cover;
+     background-size: cover;
 }
 
 
@@ -68,6 +68,9 @@ body {
 }
 
 header {
+  height: 150px;
+  background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
+  background-size: cover;
 
 }
 
@@ -78,7 +81,77 @@ footer {
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+body{
+  font-family: 'Open Sans', sans-serif;
+  margin: 10px 20px 10px 20px;
+}
+h1{
+  font-weight: 800; 
+  color: white;
+  font-size: 24px;
+  margin: 30px;
+  margin-left: 50px;
+}
+h2{
+  text-align: center;
+  font-weight: 400;
+  font-size: 24px;
+  color: white;
+  padding-bottom:40px;
 
-
-
+}
+h3{
+  text-align: center;
+  font-weight: 800;
+  font-size: 14px;
+  border:5px 5px 5px 5px;
+  background-color: #f9e42e;
+  padding: 10px;
+  margin: 15px 600px;
+}
+h4{
+  font-weight: 400;
+  font-size: 20px;
+  color: #033048;
+}
+h4, li{
+  font-weight: 300;
+  font-size: 13px;
+}
+h4, h5, ul, li{
+  background-color: white;
+  padding: 10px;
+}
+blockquote{
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
+  color: #606161;
+  margin: 10px 400px;
+  padding-bottom: 40px;
+}
+h6{
+  font-weight: 800;
+  font-size: 12px;
+  text-align: center;
+  color: white;
+  border:5px 5px 5px 5px;
+  background-color: #033048;
+  padding: 10px;
+  margin: 10px 550px;
+}
+p{
+  text-align: center;
+  color: #f9e42e;
+}
+footer{
+  font-weight: 400;
+  font-size: 9px;
+  text-align: center;
+  color: white;
+}
+p, footer{
+  background-color: #121212;
+  padding: 20px;
+}
 
