--- a/03/Homework/css/style.css
+++ b/03/Homework/css/style.css
@@ -114,28 +114,39 @@ h4{
   font-size: 20px;
   color: #033048;
 }
+h5, li{
+  font-weight: 300;
+  font-size: 13px;
+}
 h4, li{
   font-weight: 300;
   font-size: 13px;
 }
 h4, h5, ul, li{
-  background-color: white;
+  background-color: #f0efef;
   padding: 10px;
 }
 blockquote{
   font-weight: 400;
   font-size: 18px;
+  font-style: italic;
   text-align: center;
   color: #606161;
   margin: 10px 400px;
   padding-bottom: 40px;
+}
+cite{
+  color: white;
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
 }
 h6{
   font-weight: 800;
   font-size: 12px;
   text-align: center;
   color: white;
-  border:5px 5px 5px 5px;
+  border:5px;
   background-color: #033048;
   padding: 10px;
   margin: 10px 550px;
