--- a/03/Magazine/css/style.css
+++ b/03/Magazine/css/style.css
@@ -1,129 +1,102 @@
-header{
-	margin-bottom: 15px;
-
+*{
+	box-sizing: border-box;
+	min-height: 50px;
+	margin: 0;
+	padding: 0;
 }
 
-footer{
-	margin-bottom: 15px;
-
-}
-
-header,
-footer,
-aside,
-section,
-nav {
-	background-color: yellow;
-	min-height: 100px;
-}
-
-h1{
-	margin-left: 4%;
+body *{
+	
 }
 
 header{
-	width: 16%;
-	padding: 25px;
-	margin-left: 4%;
+	overflow: hidden;
+	padding: 10px;
 }
 
- header, nav {
-	display: inline-block;
-	margin-bottom: 5px;
+h1, 
+li, 
+aside, 
+#row1, 
+section.left,
+aside.right, 
+.col1,
+.col2,
+.col3,
+.col4, 
+footer {
+	background-color: grey;
 }
 
-nav{
-	min-height: 40px;
+header #logo{
+	float: left;
+	min-width: 150px;
+	margin: 0;
 }
 
-.one{
-	width: 10%;
-	padding: 1px;
-	margin-right: 4%;
-	float:right;
-}
-
-.two{
-	width: 10%;
-	padding: 1px;
-	margin-right: 2%;
+header nav{
 	float: right;
+	margin-top: 10px;
 }
 
-.three{
-	width: 10%;
-	padding: 1px;
-	margin-right: 2%;
-	float: right;
+header nav ul li {
+	float: left;
+	min-width: 30px;
+	min-height: 20px;
+	list-style: none;
+	margin-right: 10px;
 }
 
-.four{
-	width: 10%;
-	padding: 1px;
-	margin-right: 2%;
-	float: right;
+#columnwrapper {
+	overflow: hidden;
+	margin: 0 10px;
 }
 
-.five{
-	width: 10%;
-	padding: 1px;
-	margin-right: 2%;
-	float: right;
+#columnwrapper aside#mainsidebar {
+	width: 14%;
+	float: left;
+	margin-right: 1%;
+
 }
 
-
-#content {
-	display: flex;
-	flex-direction: row;
+#columnwrapper section#sectionwrapper{
+	width: 85%;
+	float: left;
 }
 
-#content aside{
-	margin-left: 4%;
-	margin-right: 80%;
-	margin-top: 5px;
-	height: 200px;
-	padding: 40px;
+#row1,
+#row2,
+#row3 {
 	margin-bottom: 10px;
-
 }
 
-#content section{
-	margin-right: 4%;
-	margin-left: 25%;
+#row2 .left{
+	width: 84%;
+	margin-right: 1%;
+	float: left;
+}
+
+#row2 .right{
+	width: 15%;
+	float: left;
 }
 
 
-#flex{
-	display: flex;
-	width: 100%;
-	margin-bottom: 20px;
-	margin-left: 1px;
-	margin-right: 4px;
-	padding: 5px;
-	border-width: 20px;
+.col1,
+.col2,
+.col3,
+.col4{
+	width: 24.625%;
+	margin-right: .5%;
+	float: left;
 }
 
-#flex .left{
-	width: 25%;
-	margin-left: 18%;
-	margin-right: 3%;
-	padding-top: 50px;
-	padding-bottom: 10px;
+.col4{
+	margin-right: 0;
 }
 
-#flex .middle{
-	width: 25%;
-	margin-right: 3%;
-}
-
-#flex .right{
-	width: 25%;
-	margin-right: 5%;
-}
 
 footer{
-	margin-right: 4%;
-	margin-left: 4%;
-	margin-top: 2%;
-	padding-top: 20px;
+	margin-top: 10px;
+	margin: 0 10px;
 }
