--- a/03/Homework/css/style.css
+++ b/03/Homework/css/style.css
@@ -4,7 +4,9 @@ Client: Your Client
 Author: Your Name
 Developer @GA in NYC
 */
-
+<style>
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,800');
+</style>
 
 /******************************************
 /* SETUP
@@ -50,8 +52,8 @@ body {
      font-size: 12px;
      line-height: 1.4;
      font-family: Helvetica, Arial, sans-serif;
-     background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
-     background-size: cover;
+    /* background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
+     background-size: cover;*/
 }
 
 
@@ -64,18 +66,6 @@ body {
   width: 100%;
   margin: auto;
   height: 500px;
-
-}
-
-header {
-  height: 150px;
-  background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
-  background-size: cover;
-
-}
-
-footer {
-
 }
 
 /******************************************
@@ -83,86 +73,137 @@ footer {
 /*******************************************/
 body{
   font-family: 'Open Sans', sans-serif;
-  margin: 10px 20px 10px 20px;
 }
+
+#container {
+
+   background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
+     background-size: cover;
+}
+
 h1{
   font-weight: 800; 
   color: white;
   font-size: 24px;
-  margin: 30px;
   margin-left: 50px;
+  padding-bottom: 50px;
 }
 h2{
   text-align: center;
   font-weight: 400;
   font-size: 24px;
   color: white;
-  padding-bottom:40px;
-
+  padding-top: 60px;
+  padding-bottom: 75px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
-h3{
+
+#container ul{
   text-align: center;
   font-weight: 800;
   font-size: 14px;
-  border:5px 5px 5px 5px;
+  border-radius: 5px;
+  width: 100%; 
   background-color: #f9e42e;
   padding: 10px;
-  margin: 15px 600px;
 }
-h4{
+
+h3{
   font-weight: 400;
   font-size: 20px;
   color: #033048;
 }
-h5, li{
-  font-weight: 300;
-  font-size: 13px;
-}
-h4, li{
-  font-weight: 300;
-  font-size: 13px;
-}
-h4, h5, ul, li{
+
+#benefits{
   background-color: #f0efef;
+  width: 100%; 
+}
+
+#benefits p, #benefits .bullets{
+  font-weight: 300;
+  font-size: 13px;
+}
+
+#benefits p, h3{
+  margin-left: 50px;
+  margin-right: 300px;
   padding: 10px;
 }
+
+#benefits .bullets{
+  padding: 10px;
+  margin-left: 100px;
+  padding-bottom: 50px;
+}
+
+#quote{
+  background: url(https://github.com/WyleshaRachell/GA-FEWD/blob/master/Week_02_Styling/Assignment/starter_code/images/testimonial_bg.jpg?raw=true);
+  width: 100%;
+  padding-bottom: 30px;
+}
+
 blockquote{
-  font-weight: 400;
+  font-weight: 300i;
   font-size: 18px;
-  font-style: italic;
   text-align: center;
-  color: #606161;
-  margin: 10px 400px;
-  padding-bottom: 40px;
+  color: grey;
 }
 cite{
   color: white;
   font-weight: 400;
   font-size: 18px;
-  text-align: center;
+  width: 100%;
+  margin-left: 40%;
+  margin-right: 40%;
 }
-h6{
+
+#signup{
+   background-color: #f9e42e;
+   /*width:100%;*/
+   padding: 20px;
+}
+
+#signup p{
+  background-color: #033048;
   font-weight: 800;
   font-size: 12px;
   text-align: center;
+  border-radius :5px;
+  border: 10px;
+  /*border-left: 10px;
+  border-right:10px;*/
+
   color: white;
-  border:5px;
-  background-color: #033048;
-  padding: 10px;
-  margin: 10px 550px;
+
 }
-p{
-  text-align: center;
+
+#end{
+  background-color: #121212;
+  width: 100%;
+}
+
+#end p{
+  font-weight: 800;
+  font-size: 24px;
   color: #f9e42e;
+  text-align: center;
+  padding-top: 40px;
 }
-footer{
+
+#end img{
+  max-width: 100%;
+  height: 30%;
+  padding: 10px;
+}
+
+#end footer{
   font-weight: 400;
   font-size: 9px;
   text-align: center;
   color: white;
+  padding-top: 40px;
 }
-p, footer{
-  background-color: #121212;
-  padding: 20px;
-}
+
+
 
