--- a/03/Homework/css/style.css
+++ b/03/Homework/css/style.css
@@ -107,7 +107,7 @@ h2{
   font-size: 14px;
   border-radius: 5px;
   width: 15%; 
-  margin-left: 40%;
+  margin-left: 42%;
   margin-right: 40%;
   background-color: #f9e42e;
   padding: 10px;
@@ -199,10 +199,15 @@ cite{
   padding-top: 40px;
 }
 
+.socialmedia{
+  text-align: center;
+}
+
 #end img{
-  max-width: 10%;
-  min-height: 30%;
-  margin-left: 37%;
+  padding-top: 20px;
+  display: inline-block;
+  max-height: 20px;
+  width: auto;
 }
 
 #end footer{
