--- a/Final_Project/about_page/css/mobile.css
+++ b/Final_Project/about_page/css/mobile.css
@@ -1,3 +1,9 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body{
 	background-color: green;
 }
@@ -6,8 +12,67 @@ h1{
 	color: yellow;
 	text-transform: uppercase;
 	text-align: center;
+	background-color: black;
 }
 
 h3{
 	color: white;
+	padding-top: 30px;
+	padding-bottom: 15px;
+}
+
+span{
+	font-weight: bold;
+	font-size: 25px;
+}
+
+img{
+	display: block;
+	margin: auto;
+	width: 12%;
+}
+
+ul,
+#why {
+	font-size: 22px;
+	color: yellow;
+	display: none;
+}
+
+#intro{
+	text-align: center;
+	margin-left: 80px;
+	margin-right: 80px;
+	color: white;
+}
+
+#background,
+#matters {
+	margin-left: 20px;
+}
+.background{
+	font-size: 20px;
+	display: none;
+	color: white;
+}
+
+#was,
+#one {
+	color: yellow;
+	font-family: bold;
+}
+
+
+#research{
+	text-align: center;
+	color: white;
+	font-size: 40px;
+	padding-bottom: 20px;
+}
+
+footer{
+	border-top: 3px solid black;
+	text-align: center;
+	padding-bottom: 20px;
+	padding-top: 20px;
 }
