--- a/Final_Project/css/mobile.css
+++ b/Final_Project/css/mobile.css
@@ -26,7 +26,12 @@ nav{
 }
 
 a{
+	color: yellow;
+}
+
+.boxLinks:hover {
 	color: green;
+
 }
 
 footer{
@@ -67,9 +72,10 @@ ul{
 
 .hamburgerMenu{
 	float: right;
-	width: 100px;
+	width: 70px;
 	display: inline;
 	position: absolute;
+	margin-left: 70px;
 
 }
 
@@ -89,12 +95,19 @@ hr{
 	background-size: cover;
 }
 
+
+
 #blurb h2{
 	padding-top: 20px;
 	padding-bottom: 30px;
 	color: white;
 	font-size: 50px;
 	margin-left: 70px;
+	display: none;
+}
+
+#blurb p{
+	color: white;
 }
 
 .join{
@@ -139,21 +152,20 @@ h2.changeColor{
 }
 
 .recipes {
-	border: 3px;
-	width: 100%;
-	display: inline;
+	border: 3px solid rgba(255,255,255,0.7);;
+	width: 98%;
+	display: block;
 	margin: auto;
 	padding: 5px;
 	color: yellow;
 	font-family: 'Indie Flower', cursive;
 	font-size: 25px;
-	background-color: rgba(255,255,255,0.7);
 }
 
 
 .restaurants {
-	border: 3px;
-	width: 100%;
+	border: 3px solid rgba(255,255,255,0.7);
+	width: 98%;
 	display: block;
 	margin: auto;
 	padding: 10px;
@@ -161,20 +173,18 @@ h2.changeColor{
 	color: yellow;
 	font-family: 'Indie Flower', cursive;
 	font-size: 25px;
-	background-color:rgba(255,255,255,0.7);
 }
 
 .goods {
-	border: 3px;
-	width: 100%;
-	display: inline;
+	border: 3px solid rgba(255,255,255,0.7);
+	width: 98%;
+	display: block;
 	margin: auto;
 	padding: 10px;
 	padding-bottom: 60px;
 	color: yellow;
 	font-family: 'Indie Flower', cursive;
 	font-size: 25px;
-	background-color:rgba(255,255,255,0.7);
 }
 
 .recipes ul {
@@ -210,22 +220,27 @@ h2.changeColor{
 		display: inline;
 }
 
+#blurb h2{
+	display: inline;
+}
 .recipes
 {	
-	width: 33%;
-	margin-right: .3%;
+	width: 31%;
+	margin-left: .5%;
+	margin-right: 2.3%;
 	float: left;
 }
 .restaurants
 {	
-	width: 33%;
-	margin-right: .3%;
+	width: 31%;
+	margin-left: .5%;
+	margin-right: 2.3%;
 	float: left;
 }
 .goods
 {	
-	width: 33%;
-	margin-right: .3%;
+	width: 31%;
+	margin-right: 1.3%;
 	float: right;
 }
 
@@ -234,4 +249,4 @@ h2.changeColor{
 	
 }
 
-}
+
