--- a/Final_Project/css/mobile.css
+++ b/Final_Project/css/mobile.css
@@ -14,7 +14,8 @@
 header{
 	background-color: purple;
 	border-bottom:15px solid black;
-	padding: 10px 50px;
+	padding-left: 20px;
+	padding-top: 20px;
 	overflow: hidden;
 }
 
@@ -43,6 +44,7 @@ footer{
 
 ul{
 	list-style-type: none;
+	font-size: 15px;
 }
 
 
@@ -50,15 +52,18 @@ ul{
 	font-family: 'Indie Flower', cursive;
 	font-weight: bold;
 	text-transform: uppercase;
-	font-size: 70px;
+	font-size: 30px;
 	color: yellow;
+	padding-bottom: 20px;
 	overflow: hidden;
 }
 
 #intro p{
 	text-transform: lowercase;
-	font-size: 40px;
-	margin-left: 20%;
+	font-size: 25px;
+	margin-left: 5%;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 #intro nav ul li{
 	float: right;
@@ -67,22 +72,26 @@ ul{
 	font-size: 20px;
 	padding-right: 10px;
 	font-family: 'Inconsolata', monospace;
-	/*display: none;*/
+	margin-right: 20px;
 }
 
+.homeBar{
+	font-size: 10px;
+}
 .hamburgerMenu{
 	float: right;
-	width: 70px;
+	width: 60px;
 	display: inline;
 	position: absolute;
 	margin-left: 70px;
+	padding-bottom: 40px;
 
 }
 
 hr{
 	padding-bottom: 5px;
     border: 0;
-    height: 4px;
+    height: 3px;
     background-color: green;
     margin: 10px;
     border-radius: 2px;
@@ -90,6 +99,7 @@ hr{
 
 #blurb{
 	width: 100%;
+	padding-top: 20px;
 	padding-bottom: 35%;
 	background:url(../images/veggies.jpeg) no-repeat center center;
 	background-size: cover;
@@ -98,7 +108,7 @@ hr{
 
 
 #blurb h2{
-	padding-top: 20px;
+	padding-top: 40px;
 	padding-bottom: 30px;
 	color: white;
 	font-size: 50px;
@@ -123,12 +133,13 @@ hr{
 	background-color: white;
 }
 
-input {
+#submit {
 	color: black;
 	background-color: yellow;
-	width: 10%;
+	width: 25%;
 	padding: 10px;
 	border-radius: 5px;
+	text-align: center;
 }
 
 
@@ -213,40 +224,61 @@ h2.changeColor{
 
 /*desktop version*/
 @media (min-width: 768px){
+	header{
+		margin: auto;
+		width: 100%;
+	}
+
 	nav{
 		overflow: hidden;
 		color: green;
 		float: right;
 		display: inline;
-}
+	}
 
-#blurb h2{
+	h1,
+	p {
+		font-size: 30px;
+	}
+
+	#blurb h2 {
 	display: inline;
-}
-.recipes
-{	
+	font-size: 25px;
+	padding-top: 15px;
+	}
+
+
+	#blurb p{
+	font-size: 25px;
+	margin-right: 10px;
+	}
+
+	.recipes{	
 	width: 31%;
 	margin-left: .5%;
 	margin-right: 2.3%;
 	float: left;
-}
-.restaurants
-{	
+	}
+
+	.restaurants {	
 	width: 31%;
 	margin-left: .5%;
 	margin-right: 2.3%;
 	float: left;
-}
-.goods
-{	
+	}
+
+	.goods {	
 	width: 31%;
 	margin-right: 1.3%;
 	float: right;
-}
+	}
 
-.hamburgerMenu{
+	.hamburgerMenu{
 	display: none;
 	
+	}
+
+	#submit{
+	width: 25%;
+	}
 }
-
-
