recipes final project update

--- a/Final_Project/recipes/css/mobile.css
+++ b/Final_Project/recipes/css/mobile.css
@@ -1,11 +1,24 @@
 
 body{
-	background-color: green;
+	background-image: url(https://i0.wp.com/glctulsa.org/wp-content/uploads/2014/05/dark_spot_background_texture_50611_1920x1080.jpg?fit=1024%2C576);
 }
+
 h1{
 	font-weight: bold;
 	padding: 20px 0px 20px 0px;
 	background-color: black;
+	text-overflow: hidden; 
+}
+
+.homeBar{
+	overflow: hidden;
+	color: green;
+	float: right;
+	display: none;
+}
+
+a{
+	color: yellow;
 }
 
 h1,
@@ -14,6 +27,14 @@ h1,
 	text-align: center;
 	width:100%;
 	color: yellow;
+}
+
+.home {
+	float: right;
+	margin-right: 30px;
+	list-style-type: none;
+	font-size: 20px;
+	color: white;
 }
 
 .am,
@@ -52,13 +73,21 @@ footer{
 section{
 	float: right;
 	font-size: 20px;
-	margin-right: 10%;
+	margin-right: 10px;
+	margin-left: 60px;
 	width:60%;
 	/*display: none;
 */}
 
 p{
 	padding-left: 15px;
+}
+
+img{
+	margin: auto;
+	display: block;
+	width: 40%;
+	padding-top: 20px;
 }
 
 .tofu1,
@@ -80,5 +109,21 @@ p{
 h5
  {
 	display: none;
+	padding-bottom: 10px;
+	color: white;
 }
 
+@media (min-width: 768px){
+	img{
+		width: 100%;
+	}
+
+	.homeBar{
+	text-overflow: hidden;
+	color: white;
+	float: right;
+	display: inline;
+	font-size: 15px;
+	}
+
+}
