--- a/Final_Project/restaurants/css/mobile.css
+++ b/Final_Project/restaurants/css/mobile.css
@@ -17,6 +17,7 @@ h1{
 	font-size: 50px;
 	text-align: center;
 	padding-bottom: 40px;
+	padding-top: 30px;
 	text-overflow: hidden;
 }
 
@@ -62,7 +63,7 @@ img{
 #nextButton {
 	width: 100px;
 	background-color: yellow;
-	color: white;
+	color: black;
 	margin-right: 20px;
 	margin-bottom: 40px;
 	padding: 5px;
@@ -73,6 +74,16 @@ img{
 	margin-left: 40%;
 }
 
+#places{
+	color: white;
+	font-size: 25px;
+	text-align: center;
+	padding-bottom: 60px;
+}
+
+li{
+	padding-bottom: 15px;
+}
 
 
 
@@ -120,5 +131,7 @@ img{
 	height: 40%;
 
 }
+
+	
 
 }
