--- a/Final_Project/css/mobile.css
+++ b/Final_Project/css/mobile.css
@@ -101,7 +101,7 @@ hr{
 	width: 100%;
 	padding-top: 20px;
 	padding-bottom: 35%;
-	background:url(../images/veggies.jpeg) no-repeat center center;
+	background:url(images/veggies.jpeg) no-repeat center center;
 	background-size: cover;
 }
 
